fixed issue with the header on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,36 @@
 :root {
   --primary-color: #ffff;
   --secondary-color: rgb(0, 0, 0);
+  
 }
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+  border: 1px solid red;
+  box-sizing: border-box;
 
+}
 
 
 body {
   font-family: 'Times New Roman', Times, serif;
-  position: fixed;
 }
+
 
 /* header/nav*/
 
 header {
   background-image: url("../images/matrix.gif");
-  background-size: cover;
   background-attachment: fixed;
-  background-position: 80%;
+  background-size: cover;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   position: sticky;
-  position: -webkit-sticky;
   padding: 25px 35px;
-top: 0%;
-z-index: 999;
+  top: 0%;
+ margin-top: 0;
 }
 
 header h1 {
@@ -59,8 +59,7 @@ header nav ul {
 
 header nav ul li a {
   padding: 15px 20px;
-  font-weight: lighter;
-  font-size: 1.55vw;
+  font-size: 25px
 }
 
 header nav ul li a:hover {
@@ -90,13 +89,13 @@ border-radius: 10px;
   background-attachment: fixed;
   background-position: 100%;
   background-image: url(../images/matrix.gif);
+  flex-wrap: wrap;
 }
 
 .about-me img {
   height: auto;
   width: 90%;
   padding-bottom: 30px;
-  margin-right: 50px;
   padding-left: 150px;
 }
 
@@ -105,8 +104,6 @@ border-radius: 10px;
   padding-left: 180px;
   padding-bottom: 60px;
 }
-
-
 /* about me ends*/
 
 /* my work begins */
@@ -117,18 +114,14 @@ padding-top: 40px;
 padding-bottom: 40px;
 }
 
-.me {
-
-}
 
 .my-work {
   width: 100%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content:center;
   align-items: right;
-  align-content: center;
   background-attachment: fixed;
 }
 
@@ -137,14 +130,15 @@ padding-bottom: 40px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 20px;
+  justify-content:center;
+ 
   flex: 1;
 }
 
 .works {
   padding: 25px;
   line-height: 1.3;
+  justify-content: center;
 }
 
 .works p {
@@ -181,6 +175,7 @@ max-width: 80%;
   background-attachment: fixed;
   background-position: 100%;
   background-image: url(../images/matrix.gif);
+  flex-wrap: wrap;
 }
 
 .contact-info p {
@@ -193,18 +188,14 @@ footer {
   padding-top: 40px;
   color: var(--primary-color);
   text-align: center;
-  background-size: cover;
   background-attachment: fixed;
-  background-position: 100%;
   background-image: url(../images/matrix.gif);
+  flex-wrap: wrap;
 }
 /* footer ends */
 
-.flex-row {
-  align-content: center;
-}
 
- /* responsiveness */
+/* responsiveness */
 @media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
@@ -231,9 +222,7 @@ footer {
     text-align: center;
     width: 100%;
   }
-  .my-work {
-    flex: 0 100;
-  }
+
 }
 
 @media screen and (max-width: 575px) {
@@ -258,24 +247,13 @@ footer {
     font-size: 20px;
   }
   
-  footer h2, footer div {
-    text-align: center;
-    width: 100%;
+  body {
+    overflow-x: hidden;
   }
 
-  .works {
-    flex: 0 100%;
-  }
-
-  .contact-info {
-    text-align: center;
-  }
-
-  .contact-info > * {
-    flex: 0 100%;
-  }
- .about-me {
-  flex: 0 100%;
+ footer {
+   flex: 0 100%;
  }
+
 
 }
